force-app/main/default/objects/TrailForge_Access_Throttle__c/TrailForge_Access_Throttle__c.object-meta.xml
<CustomObject>
    <description>Tracks rate limiting for access code validation attempts.</description>
    <label>TrailForge Access Throttle</label>
    <nameField>
        <displayFormat>THR-{0000}</displayFormat>
        <label>Throttle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TrailForge Access Throttles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>