force-app/main/default/objects/TrailForge_Access_Throttle__c/fields/Fingerprint__c.field-meta.xml
<CustomField>
    <fullName>Fingerprint__c</fullName>
    <description>Client fingerprint for rate limiting.</description>
    <externalId>true</externalId>
    <label>Fingerprint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>