force-app/main/default/objects/TrailForge_Access_Throttle__c/fields/Window_Start__c.field-meta.xml
<CustomField>
    <fullName>Window_Start__c</fullName>
    <description>Start of the current rate limit window.</description>
    <label>Window Start</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>